Fix Z-index

--- a/landing/style.css
+++ b/landing/style.css
@@ -105,6 +105,7 @@ body {
   width: 100%;
   height: 140px;
   background: linear-gradient(to top, #1f1257, transparent);
+  z-index: 1;
 }
 
 .background img {
@@ -148,6 +149,7 @@ body {
   top: 10%;
   left: 50%;
   transition: all 0.5s;
+  z-index: 2;
 }
 
 .rocket[data-status="intro"] {
